--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ nav ul {
 }
 
 .hero p {
-  margin: 0 10px 0 0;
+  margin-bottom: 30px;
   color: #4b543b;
 }
 
@@ -257,6 +257,49 @@ nav ul {
   padding: 40px 0;
 }
 
+/* mobile landing page */
+@media (max-width: 550px) {
+  .main-grid {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .hero {
+    align-items: flex-start;
+    text-align: left;
+    padding-right: 100px;
+    padding-left: 10px;
+  }
+
+  .hero h1 {
+    font-size: 2rem;
+    line-height: 1.5;
+  }
+
+  .hero-buttons {
+    align-items: flex-start;
+  }
+
+  .feature-card {
+    border: 1px solid #aaa;
+    padding: 15px;
+    border-radius: 12px;
+
+    position: absolute;
+    right: 0;
+    width: 250px;
+    transform: translateX(70%);
+  }
+
+  .card-image {
+    width: 70%;
+    height: 200px;
+  }
+}
+
 @media (max-width: 550px) {
   .main-grid {
     position: relative;
@@ -354,9 +397,7 @@ nav ul {
   color: #4b543b;
   border-radius: 20px;
 }
-
 /*** SWIPE LAYOUT ***/
-
 .swipe-layout {
   position: relative; /* so absolute children use this as origin */
   max-width: 360px; /* match your card/container width */
@@ -416,12 +457,10 @@ nav ul {
   display: flex;
   gap: 2rem;
 }
-
 .button-type2 img {
   width: 48px; /* shrink your check/x icons */
   height: auto;
 }
-
 /* — Swipe Buttons (Type 2) — */
 .swipe-buttons {
   margin-top: 2rem;
@@ -490,7 +529,6 @@ nav ul {
 .restaurant-card.flipped .card-front {
   z-index: -1000;
 }
-
 .card-front,
 .card-back {
   position: absolute;
@@ -612,14 +650,15 @@ nav ul {
 }
 
 .help-icon {
-  width: 28px; /* matches your mockup */
+  width: 28px;
   height: auto;
 }
 
+.feature-card-desktop {
+  display: block;
+}
 .mobile-card-wrapper {
   display: none;
-  margin: 0;
-  padding: 0;
 }
 
 @media (max-width: 600px) {
@@ -633,5 +672,10 @@ nav ul {
   .mobile-card-wrapper {
     display: block;
     margin: 3rem 0 0 0;
+  }
+  .hero {
+    align-items: center;
+    text-align: center;
+    padding: 35px 20px; 
   }
 }
