--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav ul {
 }
 
 /* desktop navbar */
-@media (min-width: 551px) {
+@media (min-width: 601px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -56,7 +56,7 @@ nav ul {
 }
 
 /* mobile navbar */
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   header {
     overflow: hidden;
     padding: 0;
@@ -163,18 +163,67 @@ nav ul {
 .feature-card {
   flex: 1;
   max-width: 300px;
-  background-color: #ffffff;
+  background-color: #f3f4e4;
   flex-direction: column;
   align-items: center;
   text-align: center;
   margin-top: 3rem;
 
-  border: 1px solid #aaa;
-  padding: 20px;
-  border-radius: 12px;
+  width: 320px;
+  height: 460px;
+
+  border: none;
+  border-radius: 20px;
+  perspective: 1000px;
+  position: relative;
 }
 
-.feature-card h2 {
+.example-inner-card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  border: 1px solid #aaa;
+  border-radius: 20px;
+ }
+
+.feature-card:hover .example-inner-card {
+  transform: rotateY(180deg);
+}
+
+.example-card-front, .example-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.example-card-front {
+  background-color: white;
+  color: black;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.example-card-back {
+  background-color: white;
+  color: black;
+  transform: rotateY(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border-radius: 20px;
+}
+
+.card-title {
   margin-top: 0;
   font-weight: normal;
   color: #3a3f2c;
@@ -258,49 +307,7 @@ nav ul {
 }
 
 /* mobile landing page */
-@media (max-width: 550px) {
-  .main-grid {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  }
-
-  .hero {
-    align-items: flex-start;
-    text-align: left;
-    padding-right: 100px;
-    padding-left: 10px;
-  }
-
-  .hero h1 {
-    font-size: 2rem;
-    line-height: 1.5;
-  }
-
-  .hero-buttons {
-    align-items: flex-start;
-  }
-
-  .feature-card {
-    border: 1px solid #aaa;
-    padding: 15px;
-    border-radius: 12px;
-
-    position: absolute;
-    right: 0;
-    width: 250px;
-    transform: translateX(70%);
-  }
-
-  .card-image {
-    width: 70%;
-    height: 200px;
-  }
-}
-
-@media (max-width: 550px) {
+@media (max-width: 600px) {
   .main-grid {
     position: relative;
     display: flex;
@@ -335,15 +342,8 @@ nav ul {
   }
 
   .feature-card {
-    border: 1px solid #aaa;
-    padding: 10px;
-    border-radius: 12px;
     transform: scale(90%);
     margin-top: -4rem;
-
-    position: relative;
-    align-self: center;
-    width: 300px;
   }
 
   .card-image {
@@ -571,8 +571,6 @@ nav ul {
 .card-details p {
   text-align: left;
   width: 100%;
-  display: flex;
-  align-items: center;
   gap: 0.5rem;
   margin: 0.75rem 0;
 }
