added fixed height styling

--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,8 @@ nav ul {
     }
     .card-img {
       width: 100%;
-      height: auto;
+      height: 180px;
+      object-fit: cover;
       border-radius: 12px;
       margin: 1rem 0;
     }
