--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,16 @@ header {
    margin: 0;
 }
 
+.header-action-bar {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-top: 1rem;
+   margin-bottom: -50px;
+}
+
 #clear-filters-btn {
-   position: absolute;
-   top: 70px;                
-   right: 20px;            
-   font-size: 1rem;          
+   font-size: 1rem;   
    padding: 0.25rem 0.5rem;  
    background-color: #b4d2ba; 
    color: #ffffff; 
@@ -26,7 +31,6 @@ header {
    border-radius: 10px; 
    cursor: pointer;
    transition: background-color 0.3s ease;
-   z-index: 1;
  }
 
 
