--- a/css/collections.css
+++ b/css/collections.css
@@ -80,7 +80,7 @@ main.collection {
   background: var(--bg, #fff);
   cursor: pointer;
   color: #ffffff;             /* white text */
-  background-color: #b4d2ba;;  /* blue background (bootstrap‐style) */
+  background-color: #b4d2ba;  /* blue background (bootstrap‐style) */
   border: none;
   cursor: pointer;
 }
@@ -218,7 +218,7 @@ box-shadow: 0 6px 8px rgb(0, 0, 0);
 /* -------- Card Backside -------- */
 .collection-card-back .div-imgs{
 display:flex;
-gap:.5rem;
+gap: .5rem;
 }
 .collection-card-back .div-imgs img{
 width:7rem;
@@ -233,16 +233,7 @@ border-radius:.5rem;
 background:#fff;
 display:flex;
 flex-direction:column;
-gap:1rem;
-align-items:center;
-flex:1 1 auto;
-}
-
-.collection-card-back article{
-background:#fff;
-display:flex;
-flex-direction:column;
-gap:1rem;
+gap: 1rem;
 align-items:center;
 flex:1 1 auto;
 }
@@ -379,7 +370,7 @@ object-fit: cover;
     max-height: 50%;
   }
 
-  .left-panel{
+  .left-panel {
     max-width: 100%;
     position: static;
     top: auto;
