--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,8 @@ nav ul {
 
 
    nav a {
-       transition: color 0.2s;
+      display: flex !important;
+      transition: color 0.2s;
    }
 
 
@@ -464,7 +465,8 @@ nav ul {
      flex-direction: column;
      align-items: center;
      padding: 20px;
-     margin-top: -4rem;
+     margin-top: -1px;
+     z-index: 10;
   }
 
   .hero {
@@ -478,6 +480,7 @@ nav ul {
      flex-direction: column;
      font-size: 2rem;
      line-height: 1.5;
+     margin-top: -10px;
   }
 
   .hero p {
